# ripgrep

./: CHANGELOG.md  Cargo.toml  README.md
complete/: _rg
grep-matcher/src/: lib.rs
grep-matcher/tests/: test_matcher.rs  util.rs
grep-printer/: Cargo.toml
grep-printer/src/: counter.rs  lib.rs  standard.rs  stats.rs
grep-regex/: Cargo.toml
grep-regex/src/: ast.rs  config.rs  crlf.rs  error.rs  lib.rs  literal.rs  matcher.rs  strip.rs  word.rs
grep2/: Cargo.toml
grep2/src/: buffer.rs  lib.rs  line_buffer.rs  lines.rs  matcher.rs  searcher.rs  searcher_builder.rs  searcher_exec.rs  sink.rs  testutil.rs
grep2/src/searcher/: core.rs  glue.rs  mod.rs
grep2/tests/: test_matcher.rs  tests.rs  util.rs
src/: app.rs  args.rs  preprocessor.rs  worker.rs
tests/: tests.rs
