[package]
name = "grep2"
version = "0.1.8"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = """
Fast line oriented regex searching as a library.
"""
documentation = "https://docs.rs/grep"
homepage = "https://github.com/BurntSushi/ripgrep"
repository = "https://github.com/BurntSushi/ripgrep"
readme = "README.md"
keywords = ["regex", "grep", "egrep", "search", "pattern"]
license = "Unlicense/MIT"

[dependencies]
bytecount = "0.3.1"
grep-matcher = { version = "0.0.1", path = "../grep-matcher" }
log = "0.4"
memchr = "2"

[dev-dependencies]
regex = "1"

[features]
avx-accel = [
  "bytecount/avx-accel",
]
simd-accel = [
  "bytecount/simd-accel",
]
